--- a/index.html
+++ b/index.html
@@ -1,38 +1,235 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Navigation App</title>
+    <meta charset="UTF-8" />
+    <title>Campus Navigation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
-        #map {
-            height: 500px;
-            width: 100%;
-        }
-
-        body {
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
             font-family: Arial, sans-serif;
-            margin: 20px;
+            overflow: hidden;
         }
 
-        input {
-            margin: 5px;
-            padding: 8px;
-            width: 200px;
+        #map {
+            height: 100%;
+            width: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 0;
         }
 
-        button {
-            padding: 8px 12px;
+        /* ======= Toggle Buttons ======= */
+        .top-button {
+            position: absolute;
+            top: 16px;
+            padding: 10px 14px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            z-index: 4;
+            font-weight: bold;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+        }
+
+        .top-left {
+            left: 16px;
+        }
+
+        .top-right {
+            right: 16px;
+        }
+
+        /* ======= Side Panels ======= */
+        .side-panel {
+            position: absolute;
+            top: 0;
+            width: 240px;
+            height: 100%;
+            background-color: #ffffff;
+            box-shadow: 2px 0 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease;
+            z-index: 3;
+            padding: 1rem;
+            box-sizing: border-box;
+        }
+
+            .side-panel.left {
+                left: 0;
+                transform: translateX(-100%);
+            }
+
+                .side-panel.left.open {
+                    transform: translateX(0);
+                }
+
+            .side-panel.right {
+                right: 0;
+                transform: translateX(100%);
+            }
+
+                .side-panel.right.open {
+                    transform: translateX(0);
+                }
+
+        /* ======= Bottom Sheet ======= */
+        .bottom-sheet {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            max-height: 60%;
+            background: #fff;
+            border-top-left-radius: 16px;
+            border-top-right-radius: 16px;
+            box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
+            z-index: 2;
+            display: flex;
+            flex-direction: column;
+            transform: translateY(70%);
+            transition: transform 0.3s ease;
+        }
+
+            .bottom-sheet.open {
+                transform: translateY(0%);
+            }
+
+        .sheet-tab {
+            height: 40px;
+            background: transparent;
+            text-align: center;
+            cursor: pointer;
+            position: relative;
+        }
+
+        .arrow {
+            width: 30px;
+            height: 4px;
+            background-color: #ccc;
+            border-radius: 3px;
+            margin: 8px auto 0;
+            position: relative;
+            transition: transform 0.3s ease;
+        }
+
+        .bottom-sheet.open .arrow {
+            transform: rotate(180deg);
+        }
+
+        .search-fields {
+            padding: 0 16px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        input[type="text"] {
+            padding: 10px;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+            font-size: 1rem;
+        }
+
+        .go-button {
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .recent-list {
+            padding: 0 16px 16px;
+            overflow-y: auto;
+            flex: 1;
+        }
+
+        .recent-item {
+            padding: 12px;
+            background: #f0f0f0;
+            margin-bottom: 10px;
+            border-radius: 8px;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <h2>Get Directions</h2>
-    <input id="origin" type="text" placeholder="Enter origin" />
-    <input id="destination" type="text" placeholder="Enter destination" />
-    <button onclick="getDirections()">Go</button>
 
     <div id="map"></div>
 
+    <!-- Top Toggle Buttons -->
+    <button class="top-button top-left" onclick="togglePanel('left')">☰</button>
+    <button class="top-button top-right" onclick="togglePanel('right')">⚙</button>
+
+    <!-- Left Panel -->
+    <div class="side-panel left" id="leftPanel">
+        <h3>Menu</h3>
+        <p>Navigation Options, Favorites, etc.</p>
+    </div>
+
+    <!-- Right Panel -->
+    <div class="side-panel right" id="rightPanel">
+        <h3>Settings</h3>
+        <p>Preferences, Map Layers, etc.</p>
+    </div>
+
+    <!-- Bottom Sheet -->
+    <div class="bottom-sheet" id="bottomSheet">
+        <div class="sheet-tab" onclick="toggleSheet()">
+            <div class="arrow"></div>
+        </div>
+
+        <div class="search-fields">
+            <input id="origin" type="text" placeholder="Enter origin" />
+            <input id="destination" type="text" placeholder="Enter destination" />
+            <button class="go-button" onclick="getDirections()">Go</button>
+        </div>
+
+        <div class="recent-list">
+            <div class="recent-item" onclick="setDestination('Alumni Hall')">Alumni Hall</div>
+            <div class="recent-item" onclick="setDestination('FEB: Rm 113')">FEB: Rm 113</div>
+            <div class="recent-item" onclick="setDestination('Middlesex College')">Middlesex College</div>
+        </div>
+    </div>
+
+    <!-- Google Maps API -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCElDC-o99oyH5cS2STSBRwrXR-X139d2c&libraries=places"></script>
     <script src="app.js"></script>
+
+    <!-- Panel/Sheet Toggle Logic -->
+    <script>
+        const sheet = document.getElementById('bottomSheet');
+        const leftPanel = document.getElementById('leftPanel');
+        const rightPanel = document.getElementById('rightPanel');
+
+        function toggleSheet() {
+            sheet.classList.toggle('open');
+        }
+
+        function setDestination(place) {
+            document.getElementById('destination').value = place;
+            toggleSheet(); // optional close
+            getDirections();
+        }
+
+        function togglePanel(side) {
+            if (side === 'left') {
+                leftPanel.classList.toggle('open');
+                // Close other if open
+                rightPanel.classList.remove('open');
+            } else {
+                rightPanel.classList.toggle('open');
+                leftPanel.classList.remove('open');
+            }
+        }
+    </script>
+
 </body>
 </html>
